<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="com.fackerdev.cupones.common.entitites.CuponEntity"/>
        <variable
            name="viewModel"
            type="com.fackerdev.cupones.modules.mainModule.viewModel.MainViewModel" />
        <variable
            name="isActive"
            type="boolean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_xlarge"
        tools:context=".modules.mainModule.view.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_consult"
            android:onClick="@{()->viewModel.consultCuponByCode()}"
            app:layout_constraintStart_toEndOf="@id/btnCreate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_create"
            android:onClick="@{()->viewModel.addCupon()}"
            tools:visibility="visible"
            app:isGone="@{isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConsult"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tv_welcome"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnConsult"
            android:hint="@string/cupon_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCupon"
                android:layout_width="match_parent"
                android:text="@={viewModel.cupon.code}"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cupon_text_field"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilCupon"
            app:endIconMode="clear_text"
            android:hint="@{isActive ? @string/main_hint_active :@string/description_text_field }"
            android:enabled="@{!isActive}"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.cupon.description}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text = "Este cupon tiene el 10% de descuento en compras mayores de 10 USD"
                android:contentDescription="@string/description_text_field"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>